kuberneetes/day03/cdeploymentv1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: canary-deploy-v1
  namespace: canary-ns

spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: 128m
              memory: 200Mi
            limits:
              cpu: 256m
              memory: 400Mi
