kuberneetes/day03/servicev1.yaml
kind: Service
apiVersion: v1
metadata:
  name: cv1svc
  namespace: canary-ns
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
