kuberneetes/day03/servicev2.yaml
kind: Service
apiVersion: v1
metadata:
  name: cv2svc
  namespace: canary-ns
spec:
  selector:
    app: httpd
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
